(ui/Sidebar) fix overflow for long file names

--- a/packages/app/src/ui/Sidebar/Item/index.scss
+++ b/packages/app/src/ui/Sidebar/Item/index.scss
@@ -41,6 +41,10 @@
 		}
 
 		&__name {
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+
 			&__separator {
 				opacity: 0.6;
 			}
